--- a/Server/package.json
+++ b/Server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "firebase": "^9.9.3",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
