--- a/FrontEnd/.env
+++ b/FrontEnd/.env
@@ -1,7 +1,17 @@
-REACT_APP_API_KEY_A = AIzaSyCEEteBCvAd__1XRtFbnMlfs_2Vr5qPnGo
-REACT_APP_AUTH_DOMAIN_A = shoppingcart-5ffac.firebaseapp.com
-REACT_APP_PROJECT_ID_A = shoppingcart-5ffac
-REACT_APP_STOREAGE_BUCKET_A = shoppingcart-5ffac.appspot.com
-REACT_APP_MESSING_SENDER_ID_A=321772804429
-REACT_APP_APP_ID_A = 1:321772804429:web:5848a688b0d231ecb6ff04
-REACT_APP_MEASUREMENT_ID_A = G-V4R1EMC06D
+REACT_APP_API_KEY_A = AIzaSyDA_63rUmccDfCyyZioWrjSc-aJZA15Cmc
+REACT_APP_AUTH_DOMAIN_A = shoppingcart-a-72a44.firebaseapp.com
+REACT_APP_PROJECT_ID_A = shoppingcart-a-72a44
+REACT_APP_STOREAGE_BUCKET_A = shoppingcart-a-72a44.appspot.com
+REACT_APP_MESSING_SENDER_ID_A=894171529279
+REACT_APP_APP_ID_A = 1:894171529279:web:d27f3af099987bdd26b88a
+REACT_APP_MEASUREMENT_ID_A = G-67XVYFGSQZ
+
+REACT_APP_YOUTUBE_API_KEY=AIzaSyC7UCtCAdD9ZnlYX-r-jbZyKuOdvtz8v0E
+
+REACT_APP_API_KEY_B= AIzaSyCEEteBCvAd__1XRtFbnMlfs_2Vr5qPnGo
+REACT_APP_AUTH_DOMAIN_B = shoppingcart-5ffac.firebaseapp.com
+REACT_APP_PROJECT_ID_B = shoppingcart-5ffac
+REACT_APP_STOREAGE_BUCKET_B = shoppingcart-5ffac.appspot.com
+REACT_APP_MESSING_SENDER_ID_B=321772804429
+REACT_APP_APP_ID_B = 1:321772804429:web:5848a688b0d231ecb6ff04
+REACT_APP_MEASUREMENT_ID_B = G-V4R1EMC06D
