--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,15 +10,19 @@
     "bootstrap": "^5.2.0",
     "env-cmd": "^10.1.0",
     "firebase": "^9.9.3",
+    "jquery": "^3.6.1",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.7",
+    "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "stars-rating": "^1.1.0",
     "uniqid": "^5.4.0",
     "uuid": "^8.3.2",
+    "video.js": "^7.20.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
