--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "env-cmd": "^10.1.0",
+    "face-api.js": "^0.22.2",
     "firebase": "^9.9.3",
     "jquery": "^3.6.1",
     "popper.js": "^1.16.1",
@@ -18,7 +22,9 @@
     "react-drag-drop-files": "^2.3.7",
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
+    "react-say": "^2.1.0",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.0.1",
     "stars-rating": "^1.1.0",
     "uniqid": "^5.4.0",
     "uuid": "^8.3.2",
