--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -15,6 +15,7 @@
     "face-api.js": "^0.22.2",
     "firebase": "^9.9.3",
     "jquery": "^3.6.1",
+    "lodash.flow": "^3.5.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -24,8 +25,11 @@
     "react-router-dom": "^6.3.0",
     "react-say": "^2.1.0",
     "react-scripts": "5.0.1",
+    "react-speech": "^1.0.2",
     "react-webcam": "^7.0.1",
+    "sentiment": "^5.0.2",
     "stars-rating": "^1.1.0",
+    "state-speech-synth": "^1.0.0",
     "uniqid": "^5.4.0",
     "uuid": "^8.3.2",
     "video.js": "^7.20.2",
